load("@rules_python//python:defs.bzl", "py_binary")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_static_and_shared_library")

cmd = "$(locations :generate_export_symbols) --output_file $(OUTS) --symbols_file=$(locations :symbols.txt)"

genrule(
    name = "generate_symbols",
    srcs = ["symbols.txt"],
    outs = ["include/ExportedSymbols.h"],
    cmd = cmd,
    tools = [":generate_export_symbols"],
)

py_binary(
    name = "generate_export_symbols",
    srcs = ["generate_export_symbols.py"],
    tags = ["manual"],
)

wpilib_cc_static_and_shared_library(
    name = "ntcoreffi",
    srcs = glob([
        "c/**",
        "cpp/**",
    ]),
    hdrs = glob(["include/**/*"]) + [":generate_symbols"],
    export_symbols = False,
    includes = ["include"],
    strip_include_prefix = "include",
    wpi_maybe_shared_deps = [
        "//ntcore/src/main/native:ntcore",
        "//wpiutil/src/main/native:wpiutil",
    ],
)
