load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary", "wpilib_cc_library", "wpilib_cc_test")

wpilib_cc_library(
    name = "test-headers",
    testonly = True,
    hdrs = glob(["include/**"]),
    includes = ["include"],
)

wpilib_cc_test(
    name = "wpilibc-test",
    size = "small",
    srcs = glob(["cpp/**"]),
    tags = [
        "no-asan",
        "no-tsan",
    ],
    deps = [
        ":test-headers",
        "//wpilibc/src/main/native:wpilibc.static",
        "@gtest",
    ],
)

wpilib_cc_binary(
    name = "wpilibc-c-test",
    srcs = glob(["c/**"]),
    deps = [
        "//wpilibc/src/main/native:wpilibc.static",
        "@gtest//:gtest_main",
    ],
)
