load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary", "wpilib_cc_library")

ATHENA_SOURCES = glob(["cpp/**"])

NON_ATHENA_SOURCES = glob(["dt/**"])

wpilib_cc_library(
    name = "test_headers",
    hdrs = glob(["include/**"]),
    strip_include_prefix = "include",
)

wpilib_cc_binary(
    name = "wpilibcIntegrationTests",
    srcs = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ATHENA_SOURCES,
        "//conditions:default": NON_ATHENA_SOURCES,
    }),
    deps = [
        ":test_headers",
        "//wpilibc/src/main/native:wpilibc.shared",
        "@gtest",
    ],
)
