load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "proto_files",
    srcs = glob(["*.proto"]),
    strip_import_prefix = "",
)

cc_proto_library(
    name = "cc_proto",
    visibility = ["//visibility:public"],
    deps = [":proto_files"],
)

py_proto_library(
    name = "py_proto",
    visibility = ["//visibility:public"],
    include = ".",
    srcs = glob(["*.proto"]),
)

java_proto_library(
    name = "java_proto",
    visibility = ["//visibility:public"],
    deps = [":proto_files"],
)

py_binary(
    name = "generate_serde",
    srcs = ["generate_serde.py"],
    deps = ["//wpimath/src/main/proto/generator:helpers"]
)
