load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")

wpilib_java_junit5_test(
    name = "wpimath-test",
    # size = "small",
    # srcs = glob(["**/*.java"]),
    srcs = glob(["math/geometry/**/*.java"]),
    deps = [
        "//wpimath/src/main/java/edu/wpi/first/math:wpimath",
        "//wpimath/src/main/proto:java_proto",
        "//wpiutil/src/main/java/edu/wpi/first/util:wpiutil",
        "@maven//:org_ejml_ejml_core",
        "@maven//:org_ejml_ejml_ddense",
        "@maven//:org_ejml_ejml_simple",
    ],
)
